--- a/site/global.css
+++ b/site/global.css
@@ -1,440 +1,195 @@
-html,body{
+html, body{
+background-color: #ffffff;
 margin: 0;
 padding: 0;
-border: 0;
-background-color: #000;
-color: #fff;
-font: 300 14px/22px 'Lato',helvetica, arial, sans-serif;
-width: 100%;
-height: 100%;
-padding: 0;
+color: #111111;
+font: 1em/2 georgia, times, serif;
 }
 
+@media only screen and (min-width: 1900px) {
+   body { font-size: 1.2em; }
+}
+
+@media only screen and (min-width: 2500px) {
+   body { font-size: 1.4em; }
+}
+
+
 a{
-color: #fff;
+color: #4d230d;
 text-decoration: none;
--webkit-transition: color 0.2s;
--moz-transition: color 0.2s;
--ms-transition: color 0.2s;
--o-transition: color 0.2s;
-transition: color 0.2s;
 }
 
 a:hover{
-color: #ffffff;
+text-decoration: underline;
 }
 
-a.active, li.active a{
-color: #dddddd;
-}
-
-a.active:hover, li.active a:hover{
-	cursor: default;
-	color: inherit;
-}
-
-/* marker */
-#marker{
-	position: fixed;
-	left: 0;
-	top: 0;
-	width: 7px;
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	z-index: 13;
-}
-
-#marker li{
-	display: block;
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
-
-#marker li a{
-	display: block;
-	width: 100%;
-	height: 100%;
-	-moz-opacity: 0;
-	-webkit-opacity: 0;
-	opacity: 0;
-	-webkit-transition: opacity 0.3s;
-	-moz-transition: opacity 0.3s;
-	-ms-transition: opacity 0.3s;
-	-o-transition: opacity 0.3s;
-	transition: opacity 0.3s;
-}
-
-#marker li:hover a, #marker li.active a{
-	-moz-opacity: 1;
-	-webkit-opacity: 1;
-	opacity: 1;
-}
-
-/* sidebar */
-
-#sidebar{
-position: fixed;
-left: 7px;
+#top{
+position: absolute;
+left: 0;
 top: 0;
-width: 163px;
-height: 100%;
+width: 100%;
+padding: 15px 0;
+color: #fff;
 z-index: 10;
--webkit-transition: color 1s;
--moz-transition: color 1s;
--ms-transition: color 1s;
--o-transition: color 1s;
-transition: color 1s;
-font-size: 14px;
+font: 1.125em/1.34 helvetica, arial, verdana, sans-serif;
+-webkit-transition: background 1s ease-out;
+-moz-transition: background 1s ease-out;
+-ms-transition: background 1s ease-out;
+-o-transition: background 1s ease-out;
+transition: background 1s ease-out;
 }
 
-#profile{
-width: 24px;
-height: 24px;
-float: left;
-margin: 35px 13px 0 17px;
-}
-
-#profile img{
-	-moz-opacity: 0.8;
-	-webkit-opacity: 0.8;
-	opacity: 0.8;
-}
-
-.foreground{
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-z-index: 12;
-}
-
-.background{
-width: 100%;
-height: 100%;
+#top.active{
 background-color: #000;
--moz-opacity: 0.7;
--webkit-opacity: 0.7;
-opacity: 0.7;
+opacity: 1;
+}
+
+.author.center{
 position: absolute;
-top: 0;
-left: 0;
-z-index: 11;
--webkit-transition: background-color 1s;
--moz-transition: background-color 1s;
--ms-transition: background-color 1s;
--o-transition: background-color 1s;
-transition: background-color 1s;
+top: 1em;
+left: 50%;
 }
 
-#sidebar h1{
-font: 300 14px/18px 'Lato',helvetica, arial, sans-serif;
-margin: 0;
-padding: 32px 0 20px 5px;
+.author img{
 float: left;
-width: 100px;
+margin: 25px 0.5em 0 0;
+width: 1.5em;
 }
 
-#nav{
-margin: 0;
-padding: 20px 10px 0 20px;
+.author .title{
 float: left;
-clear: both;
+margin: 17px 0 0 1em;
 }
 
-#nav ul{
-	margin: 0;
-	padding: 0 0 15px 20px;
-	display: block;
+.author .subscript{
+font-size: 0.75em;
+display: block;
 }
 
-#nav li{
-	display: block;
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	line-height: 24px;
+.wrapper{
+width: 80%;
+min-width: 640px;
+height: 100%;
+margin: 0 auto;
+padding: 0;
 }
 
-#nav li.active a{
-	border-bottom: 1px solid #666;
+h1, h2, h3{
+font-family: "Amiri", georgia, times, serif;
+margin: 0;
+padding: 0;
+font-weight: normal;
+text-align: center;
 }
 
-#nav li a{
-	-webkit-transition: all 1s;
-	-moz-transition: all 1s;
-	-ms-transition: all 1s;
-	-o-transition: all 1s;
-	transition: all 1s;
+h1{
+font-size: 7.5em;
+line-height: 1;
+margin: 1em 0 .5em 0;
 }
 
-#nav li .year{
-	width: 50px;
-	display: inline-block;
+h2{
+font-size: 2.5em;
+line-height: 1;
+margin: 1em 0 0.8em 0;
 }
 
-#control{
-	position: absolute;
-	bottom: 40px;
-	left: 15px;
-	z-index: 20;
-	list-style: none;
-	margin: 0;
-	padding: 0;
+h3{
+font-size: 1.5em;
+line-height: 1;
+margin: 0.8em 0 0.5em 0;
 }
 
-#control li{
-	display: block;
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	height: 28px;
-	line-height: 28px;
-	position: relative;
-}
-
-.icon{
-	display: inline;
-	float: left;
-	width: 18px;
-	height: 16px;
-	margin: 5px 20px 0 15px;
-	mix-blend-mode: screen;
-}
-
-
-/* only webkit browsers support css masks, we will implement for webkit and browser detect */
-
-.icon.camera{
-	background: transparent url(img/camera.png) no-repeat;
-}
-
-.icon.camera.webkit{
-	background-image: none;
-	-webkit-mask-box-image: url(img/camera_mask.png);
-}
-
-.icon.monitor{
-	background: transparent url(img/monitor.png) no-repeat;
-}
-
-.icon.monitor.webkit{
-	background-image: none;
-	-webkit-mask-box-image: url(img/monitor_mask.png);
-}
-
-.icon.toggle{
-	background: transparent url(img/text.png) no-repeat;
-}
-
-.icon.toggle.webkit{
-	background-image: none;
-	-webkit-mask-box-image: url(img/text_mask.png);
-}
-
-.icon.comment{
-	background: transparent url(img/comment.png) no-repeat;
-}
-
-.icon.comment.webkit{
-	background-image: none;
-	-webkit-mask-box-image: url(img/comment_mask.png);
-}
-
-
-.icon.heart{
-	background: transparent url(img/heart.png) no-repeat;
-}
-
-.icon.heart.webkit{
-	background-image: none;
-	-webkit-mask-box-image: url(img/heart_mask.png);
-}
-
-.icon.download{
-	background: transparent url(img/download.png) no-repeat;
-}
-
-.icon.download.webkit{
-	background-image: none;
-	-webkit-mask-box-image: url(img/download_mask.png);
-}
-
-.icon.webkit{
-	background-color: #ccc;
-}
-
-#share .icon{
-width: 26px;
-height: 24px;
-margin: 7px 10px 0 10px;
-background-color: #ddd;
-}
-
-.icon.hackernews{
-	background: transparent url(img/hackernews.png) no-repeat;
-}
-
-.icon.hackernews.webkit{
-	background-image: none;
-	-webkit-mask-box-image: url(img/hackernews_mask.png);
-}
-
-.icon.facebook{
-	background: transparent url(img/facebook.png) no-repeat;
-}
-
-.icon.facebook.webkit{
-	background-image: none;
-	-webkit-mask-box-image: url(img/facebook_mask.png);
-}
-
-.icon.twitter{
-	background: transparent url(img/twitter.png) no-repeat;
-}
-
-.icon.twitter.webkit{
-	background-image: none;
-	-webkit-mask-box-image: url(img/twitter_mask.png);
-}
-
-.icon.reddit{
-	background: transparent url(img/reddit.png) no-repeat;
-}
-
-.icon.reddit.webkit{
-	background-image: none;
-	-webkit-mask-box-image: url(img/reddit_mask.png);
-}
-
-.icon.pinterest{
-	background: transparent url(img/pinterest.png) no-repeat;
-}
-
-.icon.pinterest.webkit{
-	background-image: none;
-	-webkit-mask-box-image: url(img/pinterest_mask.png);
-}
-
-#textbutton{
+.image{
+width: 100%;
+height: auto;
+float: left;
+margin: 0.3%;
+position: relative;
 cursor: pointer;
 }
 
-/* comments */
-#comments{
-background-color: #000;
-}
-
-#disqus_thread{
-	margin: 40px 70px 70px 70px;
-}
-
-.close{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 30px;
-	background: #222 url(img/close.png) no-repeat;
-	background-position: 95% 50%;
-}
-
-.close:hover{
-	background-color: #444;
-}
-
-/* share */
-#share, #resolution{
-	position: fixed;
-	bottom: 0;
-	left: 170px;
-	z-index: 21;
-	height: 100%;
-	background-color: #333;
-	width: 0;
-	overflow: hidden;
-	
-	-webkit-transition: color 1s, background-color 1s, width 0.5s;
-	-moz-transition: color 1s, background-color 1s, width 0.5s;
-	-ms-transition: color 1s, background-color 1s, width 0.5s;
-	-o-transition: color 1s, background-color 1s, width 0.5s;
-	transition: color 1s, background-color 1s, width 0.5s;
-	font-size: 14px;
-}
-
-#share.active, #resolution.active{
-	width: 163px;
-}
-
-#share ul, #resolution ul{
-	position: absolute;
-	bottom: 33px;
-	left: 15px;
-	width: 155px;
-	display: block;
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
-
-#share ul li, #resolution ul li{
-	display: block;
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	height: 36px;
-	line-height: 36px;
-	position: relative;
-	float: left;
-	clear: both;
-}
-
-#resolution.active {
-width: 120px;
-}
-
-#resolution ul{
-bottom: 40px;
-}
-
-#resolution ul li{
-height: 28px;
-line-height: 28px;
-margin-left: 10px;
-}
-
-#resolution ul li.active a{
-border-bottom: 1px solid #aaa;
-}
-
-/* content */
-
-#main{
-margin: 0;
-padding: 0 0 0 170px;
-min-width: 830px;
-min-height: 100%;
-overflow: hidden;
-z-index: 1;
-position: relative;
-}
-
-.slide, #comments{
-float: left;
-margin: 0;
-padding: 0;
+.image img{
 width: 100%;
 height: auto;
-clear: both;
-overflow: hidden;
-position: relative;
+display: block;
+position: absolute;
+top: 0;
+left: 0;
+margin: 0;
+padding: 0;
+opacity: 1;
+-webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -ms-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
 }
 
-#comments{
-min-height: 400px;
+.image.blank img{
+opacity: 0;
+}
+
+.image video{
+position: absolute;
+top: 0;
+left: 0;
+z-index: 2;
+width: 100%;
+height: auto;
+}
+
+.image.index1, .fullwidth{
+width: 125%;
+position: relative;
+left: -12.5%;
+margin: 0;
+cursor: default;
+}
+
+.overlay{
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+opacity: 0.5;
+}
+
+.post{
+float: left;
+width: 70%;
+padding: 3.3em 15% 3.3em 15%;
+}
+
+.post.index1{
+position: absolute;
+left: 0;
+top: 15em;
+text-align: center;
+z-index: 5;
+color: #fff;
+width: 100%;
+padding: 0;
+float: none;
+}
+
+.post.index1 h1{
+margin-bottom: 0.2em;
+margin-right: 0.5em;
+margin-left: 0.5em;
+}
+
+.index1 p{
+margin-right: 3em;
+margin-left: 3em;
+}
+
+@media only screen and (max-width: 1200px) {
+   .post{ width: 100%; padding: 20px 0 30px 0; }
+   .post.index1{ top: 7em; }
+   h1{ font-size: 5em; }
 }
 
 .progress{
@@ -473,23 +228,117 @@ background-color: #ddd;
 transition: width 0.5s ease-in;
 }
 
-a.internal{
-position: absolute;
-top: 0;
-left: 0;
-}
-
-.post{
-position: absolute;
-top: 0;
-left: 0;
+#fullscreen, #fullscreenvideo{
 width: 100%;
 height: 100%;
-font: 300 1em/1.6em 'Lato',helvetica, arial, sans-serif;
-z-index: 5;
--moz-opacity: 1;
--webkit-opacity: 1;
-opacity: 1;
+position: fixed;
+top: 0;
+left: 0;
+z-index: 20;
+display: none;
+}
+
+#fullscreenvideo{
+z-index: 21;
+}
+
+#fullscreen.active{
+display: block;
+background-color: #000;
+}
+
+#fullscreenvideo.active{
+display: block;
+}
+
+#fullscreen img, #fullscreenvideo video{
+margin: 0 auto;
+display: block;
+position: relative;
+}
+
+/* nav */
+#nav{
+width: 80%;
+max-height: 0;
+overflow: hidden;
+padding: 0 10%;
+color: #fff;
+-webkit-transition: max-height 1s;
+-moz-transition: max-height 1s;
+-ms-transition: max-height 1s;
+-o-transition: max-height 1s;
+transition: max-height 1s;
+}
+
+#top.active #nav{
+max-height: 2400px;
+padding: 20px 10%;
+}
+
+#nav ul{
+margin: 0;
+padding: 20px 0 0 0;
+float: left;
+clear: both;
+width: 100%;
+}
+
+#nav li .label{
+display: block;
+padding-top: 20px;
+}
+
+#nav li{
+float: left;
+clear: both;
+width: 100%;
+list-style: none;
+margin: 0;
+padding: 0;
+}
+
+#nav li.gallery{
+margin: 0 10px 10px 0;
+padding: 0;
+list-style: none;
+width: 15em;
+height: 15em;
+background-color: #333;
+clear: none;
+text-align: center;
+position: relative;
+overflow: hidden;
+border: 1px solid transparent;
+}
+
+#nav li.gallery.active, #nav li.gallery:hover{
+border: 1px solid #fff;
+}
+
+#nav li.gallery.active{
+background: transparent;
+cursor: default;
+}
+
+#nav li a{
+color: #fff;
+text-align: center;
+display: block;
+width: 90%;
+padding: 6.5em 5% 6.5em 5%;
+position: relative;
+z-index: 11;
+text-decoration: none;
+}
+
+#nav li img{
+position: absolute;
+top: 0;
+left: 0;
+z-index: 10;
+height: 100%;
+opacity: 0.8;
 -webkit-transition: opacity 0.5s ease-in;
 -moz-transition: opacity 0.5s ease-in;
 -ms-transition: opacity 0.5s ease-in;
@@ -497,173 +346,77 @@ opacity: 1;
 transition: opacity 0.5s ease-in;
 }
 
-.post a:hover{
-text-decoration: underline;
+#nav li:hover img{
+opacity: 1;
 }
 
-.post.hidden{
--moz-opacity: 0;
--webkit-opacity: 0;
-opacity: 0;
+#nav_toggle{
+color: #fff;
+margin: 25px 0 0 1em;
+float: right;
 }
 
-.post .content{
-clear: both;
-position: absolute;
+.arrow_circle{
+float: left;
+width: 2em;
+height: 2em;
+border: 2px solid #fff;
+border-radius: 2em;
+margin-right: 1em;
+}
+
+.arrow_down {
+width: 0;
+height: 0;
+border-left: 5px solid transparent;
+border-right: 5px solid transparent;
+border-top: 5px solid #fff;
+display: block;
+margin: 0.85em auto;
+}
+
+.active .arrow_down{
+border-top: 0;
+border-bottom: 5px solid #fff;
+}
+
+.moretext{
+float: right;
+margin-top: 0.45em;
+}
+
+#footer{
+float: left;
 width: 100%;
-height: 100%;
+clear: both;
+margin: 3em 0;
+padding: 3em 0;
+position: relative;
+font-family: helvetica, arial, verdana,sans-serif;
 }
 
-.image{
+#footer .author{
 float: none;
+margin-left: -150px;
+}
+
+#footer .author img{
+border-color: #333;
+width: 2.5em;
+}
+
+/* reverse content order */
+.textafter{
 width: 100%;
-height: auto;
-visibility: hidden;
-position: absolute;
-top: 0;
-left: 0;
-z-index: 1;
+-ms-box-orient: horizontal;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
 }
-
-.image.active{
-visibility: visible;
-}
-
-video.image{
-z-index: 2;
-}
-
-.post h1, .post h2, .post h3{
-display: block;
-font: 100 4em 'Lato',helvetica, arial, sans-serif;
-margin: 0;
-padding: 20px 0 10px 0;
-}
-
-.post h1{
--webkit-text-stroke: 0.5px;
-}
-
-.post h2{
-clear: both;
-font-size: 2em;
-padding: 10px 0 10px 0;
-}
-
-.post h3{
-	clear: both;
-	font: 300 1.2em 'Lato',helvetica, arial, sans-serif;
-	padding: 10px 0 10px 0;
-}
-
-.post h1 .sub{
-display: block;
-margin: 10px 0 0 0;	
-font: 300 18px/22px 'Lato',helvetica, arial, sans-serif;
-}
-
-.post h2 .sub{
-float: left;
-width: 16px;
-height: 16px;
-background: transparent url(img/comment.png) no-repeat;
-margin: 10px 10px 0 0;
-}
-
-.post .pagenav{
-float: left;
-margin: 30px 0 0 0;
-padding: 0;
-overflow: hidden;
-clear: both;
-}
-
-.post .pagenav li{
-float: left;
-list-style: none;
-margin: 0 12px 0 0;
-width: 25px;
-height: 26px;
-border: 1px solid #fff;
--webkit-border-radius: 25px;
--moz-border-radius: 25px;
-border-radius: 25px;
-text-align: center;
-line-height: 25px;
-cursor: pointer;
-font-size: 14px;
--webkit-transition: background-color 0.2s;
--moz-transition: background-color 0.2s;
--ms-transition: background-color 0.2s;
--o-transition: background-color 0.2s;
-transition: background-color 0.2s;
-}
-
-.post .pagenav li:hover{
-background-color: #ed5a2d;
-border-color: #ed5a2d;
-}
-
-.post .pagenav li.active{
-background-color: #fff;
-color: #333;
-border-color: #fff;
-cursor: default;
-}
-
-/* bottom nav */
-.prev, .next{
-width: 50%;
-float: left;
-}
-
-.prev a, .next a{
-display: block;
-min-height: 100px;
-font: 300 48px 'Lato',helvetica, arial, sans-serif;
--webkit-transition: all 0.5s;
--moz-transition: all 0.5s;
--ms-transition: all 0.5s;
--o-transition: all 0.5s;
-transition: all 0.5s;
-}
-
-.prev a{
-padding: 30px 0 30px 120px;
-background: transparent url(img/prev.png) no-repeat;
-background-position: 50px 42px;
-}
-
-.next a{
-padding: 30px 120px 30px 0;
-background: transparent url(img/next.png) no-repeat;
-background-position: 100% 42px;
-}
-
-.next a{
-text-align: right;
-}
-
-.final.slide a .text{
--webkit-text-stroke: 0.5px;
-}
-
-.final.slide a .sub{
-display: block;
-font-size: 20px;
-}
-
-.prev a:hover, .next a:hover{
-background-color: #222;
-}
-
-/* polygon */
-.polygon{
-white-space: nowrap;
-}
-
-.filler{
-display: inline-block;
-height: 10px;
-min-width: 1px;
-}
+.textafter .wrapper {order: 2}
+.textafter .image {order: 1}
